Add artifact for release

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,10 +9,11 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@master
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.0.0
@@ -23,3 +24,14 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./dist/my-artifact.zip
+          asset_name: my-artifact.zip
+          asset_content_type: application/zip
