--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,25 +1,27 @@
+name: Create Release
+
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-
-name: Create Release
+      - 'v*'
 
 jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1.0.0
+        uses: actions/checkout@v1
+
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1.0.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./dist/my-artifact.zip
+          asset_name: my-artifact.zip
+          asset_content_type: application/zip
