--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
 
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v1.0.5
+          release_name: v1.0.5
+          draft: false
+          prerelease: false
 
       - name: Upload Release Asset
         id: upload-release-asset 
