Explore github ref

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,29 +1,15 @@
-name: Create Release
+name: Upload to release
 
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types: created
 
 jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@master
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+      - name: ${{ github.ref }}
 
       - name: Upload Release Asset
         id: upload-release-asset 
