--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: See git ref
+        run: npm test
         env:
           MY_REF: ${{ github.ref }}
 
