--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,9 +14,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: See git ref
-        run: npm test
-        env:
-          RELEASE_ID: ${{ env.GITHUB_EVENT_PATH.release.id }}
+        echo: ${{ GITHUB_EVENT_PATH }}
 
       - name: Upload Release Asset
         id: upload-release-asset 
