--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: See git ref
         echo: ${{ GITHUB_EVENT_PATH }}
+        run: npm test
 
       - name: Upload Release Asset
         id: upload-release-asset 
