--- a/.github/actions/logger/package.json
+++ b/.github/actions/logger/package.json
@@ -1,14 +1,17 @@
 {
-	"name": "logger",
-	"version": "1.0.0",
-	"description": "Log event",
-	"main": "index.js",
-	"scripts": {
-		"test": "\\ None"
-	},
-	"author": "Tom Doughty",
-	"license": "MIT",
-	"dependencies": {
-		"@actions/core": "^1.0.0"
-	}
+  "name": "logger",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {
+    "@actions/core": "^1.0.0",
+    "@actions/exec": "^1.0.0",
+    "@actions/github": "^1.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
