--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,9 +17,8 @@ jobs:
         run: npm install
 
       - name: See git ref
+        id: get_upload_url
         uses: ./.github/actions/logger
-        with:
-          event: ${{ env.GITHUB_EVENT_PATH }}
 
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -27,7 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          upload_url: ${{ steps.get_upload_url.outputs.upload_url }} 
           asset_path: ./dist/my-artifact.zip
           asset_name: my-artifact.zip
           asset_content_type: application/zip
