--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Install deps
         run: npm install
 
-      - name: See git ref
-        id: get_upload_url
+      - name: Get release event
+        id: get_release_event
         uses: ./.github/actions/logger
 
       - name: Upload Release Asset
@@ -26,7 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get_upload_url.outputs.upload_url }} 
+          upload_url: ${{ steps.get_release_event.outputs.upload_url }} 
           asset_path: ./dist/my-artifact.zip
           asset_name: my-artifact.zip
           asset_content_type: application/zip
