--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get_release_event.outputs.release.upload_url }} 
+          upload_url: ${{ steps.get_release_event.outputs.upload_url }} 
           asset_path: ./dist/my-artifact.zip
           asset_name: my-artifact.zip
           asset_content_type: application/zip
