--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,23 +17,11 @@ jobs:
         run: npm install
 
       - name: Get release event
-        id: get_release_event
+        id: upload_existing_release_asset
         uses: ./.github/actions/output-event
-
-      - name: Upload release
-        uses: yakuhzi/action-release@v1
-        with:
-          file: ./dist/my-artifact.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Upload Release Asset
-      #   id: upload-release-asset 
-      #   uses: actions/upload-release-asset@v1.0.1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.get_release_event.outputs.upload_url }} 
-      #     asset_path: ./dist/my-artifact.zip
-      #     asset_name: my-artifact.zip
-      #     asset_content_type: application/zip
+        with:
+          asset_path: ./dist/my-artifact.zip
+          asset_name: my-artifact.zip
+          asset_content_type: application/zip
