--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,8 @@
 name: Upload to release
 
 on:
-  push:
-    tags:        
-      - v*
+  release:
+    types: created
 
 jobs:
   build:
@@ -27,13 +26,9 @@ jobs:
           asset_name: my-artifact.zip
           asset_content_type: application/zip
 
-      - name: Publish to NPM
-        uses: pascalgn/npm-publish-action@51fdb4531e99aac1873764ef7271af448dc42ab4
-        with:
-          tag_name: "v%s"
-          tag_message: "v%s"
-          commit_pattern: "^Release (\\S+)"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_API_KEY }}
+      - name: Add NPM auth
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_API_KEY }}" > ~/.npmrc
+      
+      - name: Publish package
+        run: npm publish
           
