--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "td-add",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "Package to add 2 numbers",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,17 @@
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
     "jsdoc": "^3.6.3"
-  }
+  },
+  { 
+    "engines" : {  
+      "node" : ">=12.13.1" 
+    }
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/tomdoughty/td-add.git"
+  },
+  "keywords": [
+    "JavaScript", "GitHub Actions"
+  ]
 }
