--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,10 +1,10 @@
-name: Pull Request
+name: PR
 
 on: pull_request
 
 jobs:
   build:
-    name: Create Release
+    name: Pull request
     runs-on: ubuntu-latest
 
     steps:
